@startuml
hide circle

entity "User" as User {
  * id : INT <<PK>>
  --
  name : VARCHAR
  email : VARCHAR
  password : VARCHAR
  deletedAt : TIMESTAMP
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity "Role" as Role {
  * id : INT <<PK>>
  --
  name : VARCHAR
}

entity "Project" as Project {
  * id : INT <<PK>>
  --
  title : VARCHAR
  description : TEXT
  startDate : DATE
  endDate : DATE
  createdBy : INT <<FK User.id>>
}

entity "ProjectUser" as ProjectUser {
  * id : INT <<PK>>
  --
  projectId : INT <<FK Project.id>>
  userId : INT <<FK User.id>>
}

entity "Ticket" as Ticket {
  * id : INT <<PK>>
  --
  title : VARCHAR
  description : TEXT
  stepsToReproduce : TEXT
  status : VARCHAR
  severity : VARCHAR
  projectId : INT <<FK Project.id>>
  createdBy : INT <<FK User.id>>
  assignedTo : INT <<FK User.id>>
}

entity "Comment" as Comment {
  * id : INT <<PK>>
  --
  content : TEXT
  fileUrl : VARCHAR
  createdBy : INT <<FK User.id>>
  ticketId : INT <<FK Ticket.id>>
}

entity "Attachment" as Attachment {
  * id : INT <<PK>>
  --
  title : VARCHAR
  fileUrl : VARCHAR
  ticketId : INT <<FK Ticket.id>>
}

entity "Notification" as Notification {
  * id : INT <<PK>>
  --
  title : VARCHAR
  description : TEXT
  ticketId : INT <<FK Ticket.id>>
}

entity "ActivityLog" as ActivityLog {
  * id : INT <<PK>>
  --
  title : VARCHAR
  description : TEXT
  projectId : INT <<FK Project.id>>
}

' Relationships / cardinalities
Role ||--o{ User : "has"
User ||--o{ Project : "created"
Project ||--o{ ProjectUser : "has"
User ||--o{ ProjectUser : "member"
Project ||--o{ Ticket : "has"
Ticket ||--o{ Comment : "has"
Ticket ||--o{ Attachment : "has"
Ticket ||--o{ Notification : "has"
Project ||--o{ ActivityLog : "has"

' Ticket relations to User
User ||--o{ Ticket : "created"
User ||--o{ Ticket : "assigned"

@enduml
